--- a/docker/configs/nginx/default.conf
+++ b/docker/configs/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     index index.php;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root $workdir/public;
+    root $workdir/src/Shortener/public;
 
     location / {
         try_files $uri /index.php$is_args$args;
